// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

package com.example.replicated.multimap;

option java_outer_classname = "SomeMultiMapApi";

message Key {
  string key = 1;
}

message Value {
  string value = 1;
}

message PutValue {
  string multi_map_id = 1 [(kalix.field).id = true];
  Key key = 2;
  Value value = 3;
}

service MultiMapService {
  option (kalix.codegen) = {
    replicated_entity: {
      name: ".domain.SomeMultiMap"
      type_id: "some-multi-map"
      replicated_multi_map: {
        key: "string"
        value: "double"
      }
    }
  };

  rpc Put(PutValue) returns (google.protobuf.Empty);
}
